# OSCVPass

./: .gitignore  404.html  CNAME  LICENSE  README.md  feed_json_created.json  feed_json_updated.json  feed_rss_created.xml  feed_rss_updated.xml  index.html  pyproject.toml  setting.py.sample  sitemap.xml
apply/: index.html
approved/: index.html
blog/: index.html
css/: styles.css
docs/: 404.html  apply-for-oscvpass.html  apply-for-qa.html  apply-for.html  community-contribute.html  community.html  development.html  index.html  intern.html  intern_Ayu_kevin.html  intern_ChAoS-UnItY.html  (+6 more)
mails/: README.md  awssestools.py  pyproject.toml  requirements.txt  send_renew.py  setting.py.sample
mails/tpl/: insufficient_for.html
src/site_docs/: .gitignore  CLAUDE.md  README.md  mkdocs.yml  pyproject.toml
src/site_docs/scripts/: update_approved_from_vcs.py
src/site_docs/zh-tw/: apply.md  index.md  license.md  non-software-license.md  open-source-definition.md  volunteer.md
src/site_docs/zh-tw/approved/: app.md  chatbot-api.md  community.md  image-sound.md  index.md  l10n.md  language.md  linux-kernel.md  open-source.md  program.md  pull-request.md  security-web3.md
src/site_docs/zh-tw/blog/: index.md
src/site_docs/zh-tw/blog/posts/: ato-2025.md  callforvolunteer.md  mozilla-bbo-data-war-digital-game.md  release-2.md
src/site_docs/zh-tw/overrides/partials/: copyright.html
src/site_docs/zh-tw/partner/: index.md
src/site_docs/zh-tw/v2/: index.md
src/site_docs/zh-tw/volunteer/: handbook.md  index.md  internship.md  onboarding.md  resources.md  tasks.md
(+52 files in other folders)
